--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.8.5",
+    "react-markdown": "^5.0.3",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.1",
+    "remark-gfm": "^1.0.0",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.1.0"
   },
